--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "react-tsdoc-loader",
   "version": "1.0.0",
   "description": "Webpack loader to inject __docgenInfo from react-tsdoc for Storybook",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "react",
     "typescript",
@@ -14,11 +10,28 @@
     "storybook",
     "loader"
   ],
+  "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "scripts": {
+    "build": "rimraf lib/ && babel src/ --out-dir lib/",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "author": "Noah Buscher",
   "license": "MIT",
   "dependencies": {
     "loader-utils": "^3.2.0",
-    "react-tsdoc": "^1.3.3",
+    "react-tsdoc": "^1.3.4",
     "ts-morph": "^13.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
+    "rimraf": "^3.0.2"
   }
 }
